# shadowshell

./: .claude  .gitignore  README.md  pyproject.toml  requirements.txt
config/: app.ini  logging.conf
demo/config/: app.ini  logging.conf
demo/historyMessages/: 1000.json  script_generation.json
demo/prompts/: global_ic_prompt.md
demo/templates/: global_userinput_tmpl.md  script_generation_userinput_tmpl.md
src/shadowshell/: __init__.py
src/shadowshell/boot/: __init__.py  starter.py
src/shadowshell/chat/: README.md  __init__.py  chat_action.py  chat_starter.py  chatbot.py  gen_chat_action2.py  intention_example.py  intention_recognizer.py  llm_config.py  llm_starter.py  sop.py  tts.py  xot.py
src/shadowshell/chat/common/: __init__.py  llm_client.py
src/shadowshell/chat/core/: README.md  __init__.py  chat_starter.py
src/shadowshell/chat/core/action/: __init__.py  action_handler.py  action_handler_factory.py  action_handler_meta.py
src/shadowshell/chat/core/backup/: __init__.py  gen_chat_action2.py  (+1 more)
src/shadowshell/chat/op/: README.md  __init__.py
src/shadowshell/config/: __init__.py  configurator.py
src/shadowshell/db/: __init__.py  db_starter.py
src/shadowshell/file/: __init__.py  file_util.py
src/shadowshell/logging/: __init__.py  console_logger.py  logger.py  logger_factory.py  logging_constants.py  logging_logger.py
src/shadowshell/model/: __init__.py  dataset.py  tree.py
src/shadowshell/monitor/: __init__.py  monitor.py
src/shadowshell/request/: __init__.py  request.py
src/shadowshell/serialize/: __init__.py  serializable.py  serializer.py  serializer_factory.py  serializer_json.py
src/shadowshell/test/: __init__.py  test.py  test_starter.py
src/shadowshell/test/case/: cp_testcase_builder.py  testcase_builder.py  testcase_tree.py
src/shadowshell/test/testee/: testee.py
src/shadowshell/test/tester/: tester.py
src/shadowshell/xyz/: __init__.py  xyz.py
tests/: __init__.py  base_test.py  chat_test.py  test_chat.py  test_evaluation.py
(+34 files in other folders)
