[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowshell"   # 全局唯一名称（检查PyPI是否被占用）
version = "202600000006"          # 版本号（每次更新需递增）
authors = [{ name = "shadowshell", email = "shadowshell@foxmail.com" }]
description = "www.shadowshell.xyz"
readme = "README.md"
requires-python = ">=3.6"  # 支持的Python版本
license = { text = "MIT" }  # 协议类型
classifiers = [             # 分类标签（可选）
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# 依赖库
dependencies = [
    "requests",
    "sqlalchemy",
    "pymysql",
    "pandas",
    "openpyxl",
    "openai",
    "pydantic",
    "httpx",
]

# 关键配置：指定包路径和自动发现规则
[tool.setuptools]
package-dir = { "" = "src" }  # 所有包位于 src 目录下
# packages = ["gitshell", "logshell"]  
packages = { find = { where = ["src"] } }